[package]
name = "rsdk-extract"
version = "0.1.1"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
md5 = "0.7.0"
#clap = "3.0.0-beta.5"
structopt = "0.3"
log = "0.4.0"
env_logger = "0.9.0"
serde_derive = "1.0.131"
toml = "0.5.8"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
image = "0.24.0"
anyhow = "1.0.58"
